--- a/gui/index.html
+++ b/gui/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" type="image/ico" href="/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <script type="module" crossorigin src="/index-DcRWStM_.js"></script>
+    <link rel="stylesheet" crossorigin href="/index-ClvCuuDJ.css">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
